Fix shadow clipping

--- a/tiling-assistant@leleat-on-github/stylesheet.css
+++ b/tiling-assistant@leleat-on-github/stylesheet.css
@@ -8,8 +8,7 @@
 }
 
 .tiling-menu-container {
-	padding: 0;
-	padding-top: 20px;
+	padding: 20px;
 }
 
 .tiling-menu-container > StBoxLayout {
